--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "node server/server.js",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "build:dev": "node build/build.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
